--- a/package.json
+++ b/package.json
@@ -15,14 +15,19 @@
   "main": "./out/extension.js",
   "contributes": {
     "views": {
-      "activitybar": [
+      "codeless-explorer": [
         {
+          "type": "webview",
           "id": "codelessExplorer",
-          "name": "Codeless Files"
+          "name": "Codeless Explorer"
         }
       ]
     },
     "commands": [
+      {
+        "command": "codeless.updateInstruction",
+        "title": "Update Instruction"
+      },
       {
         "command": "codeless.processFiles",
         "title": "Process Files",
@@ -36,6 +41,10 @@
       {
         "command": "codeless.selectFile",
         "title": "Select/Deselect File"
+      },
+      {
+        "command": "codeless.toggleFile",
+        "title": "Toggle File Selection"
       }
     ],
     "menus": {
