--- a/package.json
+++ b/package.json
@@ -66,11 +66,15 @@
     "test": "node ./out/test/runTest.js"
   },
   "devDependencies": {
-    "@types/vscode": "^1.60.0",
     "@types/node": "^14.x.x",
+    "@types/vscode": "^1.60.0",
     "@typescript-eslint/eslint-plugin": "^4.x.x",
     "@typescript-eslint/parser": "^4.x.x",
     "eslint": "^7.x.x",
     "typescript": "^4.x.x"
+  },
+  "dependencies": {
+    "axios": "^1.7.2",
+    "openai": "^4.52.7"
   }
 }
